@@ -9,5 +9,15 @@ public:
 protected:
 	virtual bool SendMessageImplementation(const std::string &Subject, const std::string &Text, const int Priority, const std::string &Sound, const bool bFromNotification);
 private:
-	std::string _apikey;
+	/* config vars */
+	std::string _clickatellApi;
+	std::string _clickatellUser;
+	std::string _clickatellPassword;
+	std::string _clickatellFrom;
+	std::string _clickatellTo;
+	/* default vars */
+	int _maxCredits;
+	int _escalate;
+	int _features;
+	int _concat;
 };
