@@ -354,14 +354,30 @@
 							</div>
 							<div class="row-fluid">
 								<div class="span6">
-									<h2><span data-i18n="SMS">SMS</span>:</h2>
+									<h2><span data-i18n="Clickatell SMS API">Clickatell SMS Api:</span></h2>
 									<table class="display" id="smstable" border="0" cellpadding="0" cellspacing="0">
 									<tr>
-										<td align="right" style="width:80px"><label for="SMSApiKey"><span data-i18n="API Key"></span>: </label></td>
-										<td><input type="input" id="SMSApiKey" name="SMSApiKey" style="width: 356px; padding: .2em;" class="text ui-widget-content ui-corner-all" />  <button data-i18n="Test" class="btn btn-info" ng-click="TestNotification('chimitsms')">Test</button></td>
+										<td align="right" style="width:80px"><label for="ClickatellAPI"><span data-i18n="API Key">API Key</span>: </label></td>
+										<td><input type="input" id="ClickatellAPI" name="ClickatellAPI" style="width: 356px; padding: .2em;" class="text ui-widget-content ui-corner-all" /></td>
+									</tr>
+									<tr>
+										<td align="right" style="width:80px"><label for="ClickatellUser"><span data-i18n="User ID"></span>: </label></td>
+										<td><input type="input" id="ClickatellUser" name="ClickatellUser" style="width: 356px; padding: .2em;" class="text ui-widget-content ui-corner-all" /></td>
+									</tr>
+									<tr>
+										<td align="right" style="width:80px"><label for="ClickatellPassword"><span data-i18n="Password"></span>: </label></td>
+										<td><input type="password" id="ClickatellPassword" name="ClickatellPassword" style="width: 356px; padding: .2em;" class="text ui-widget-content ui-corner-all" /></td>
+									</tr>
+									<tr>
+										<td align="right" style="width:80px"><label for="ClickatellFrom"><span data-i18n="From"></span>: </label></td>
+										<td><input type="input" id="ClickatellFrom" name="ClickatellFrom" style="width: 356px; padding: .2em;" class="text ui-widget-content ui-corner-all" /></td>
+									</tr>
+									<tr>
+										<td align="right" style="width:80px"><label for="ClickatellTo"><span data-i18n="To"></span>: </label></td>
+										<td><input type="input" id="ClickatellTo" name="ClickatellTo" style="width: 356px; padding: .2em;" class="text ui-widget-content ui-corner-all" />  <button data-i18n="Test" class="btn btn-info" ng-click="TestNotification('clickatell')">Test</button></td>
 									</tr>
 									</table>
-									<span data-i18n="To get a free account/API key click"></span> <a class="norm-link" href="http://www.chimit.nl/domoticz.php" target="_blank"><span data-i18n="Here"></span></a><br>
+									<span data-i18n="To get a free account/API key click"></span> <a class="norm-link" href="http://www.clickatell.com/" target="_blank"><span data-i18n="Here"></span></a><br>
 									<br>
 								</div>
 							</div>
