@@ -50,6 +50,8 @@ Version 2.0.xxxx (xxxx 2015)
 - Implemented: RFXCom, mode6 (Keeloq protocol) support
 - Removed: StackTrace
 - Changed: Notification system (big thanks to chimit!)
+- Implemented: SMS Notifications
+- Solved: Wind Graph generation could cause a crash
 
 Version 2.0.2284 (February 22th 2015)
 - Fixed: Firefox, RGBW/Setpoint popup
